# randomstuff

./: .gitignore  BSD_3clause  LICENSE  README  dub.json  meson.build
source/: app.d  arbint.d  diffkernel.d  fnv.d  fuse.d  lighting.d  main.d  meson.build  morse.d  required.d  rk.d  rtree.d  sedectree.d  sqbox.d  stack.d  stack_container.d  supersequence.d  typecons.d  word.d  xxhash.d  zefs.d  zstdc.d
source/cgfm/math/: box.d  funcs.d  matrix.d  meson.build  meson.build.orig  package.d  quaternion.d  shapes.d  simplerng.d  vector.d
source/dcompute/: meson.build
source/dcompute/driver/: meson.build
source/dcompute/driver/cuda/: meson.build
source/dcompute/driver/ocl/: meson.build
source/dcompute/driver/ocl/raw/: meson.build
source/dcompute/std/: meson.build
source/dcompute/std/cuda/: meson.build
source/dcompute/std/opencl/: meson.build
source/derelict/: meson.build
source/derelict/cuda/: meson.build
source/derelict/opencl/: meson.build
source/derelict/util/: meson.build
source/gfm/math/: meson.build  meson.build~
source/math/: box.d  vector.d
source/sys/: fcntl.d  userfaultfd.d
