project('dtower', 'd')

dtower_sources = [
  'dependencies/arsd/bmp.d',
  'dependencies/arsd/color.d',
  'dependencies/arsd/image.d',
  'dependencies/arsd/jpeg.d',
  'dependencies/arsd/nanovega.d',
  'dependencies/arsd/png.d',
  'dependencies/arsd/targa.d',
  'dependencies/arsd/dds.d',
  'dependencies/arsd/pcx.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/freetype.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftadvanc.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftbbox.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftbdf.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftbitmap.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftbzip2.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftcache.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftcid.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftcolor.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftdriver.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/fterrdef.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftfntfmt.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftgasp.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftglyph.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftgxval.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftgzip.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftimage.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftincrem.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftlcdfil.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftlist.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftlzw.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftmm.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftmodapi.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftmoderr.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftotval.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftoutln.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftparams.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftpfr.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftrender.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftsizes.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftsnames.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftstroke.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftsynth.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftsystem.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/fttrigon.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/fttypes.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ftwinfnt.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/package.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/t1tables.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/ttnameid.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/bind/tttables.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/config.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/dynload.d',
  'dependencies/bindbc-freetype/source/bindbc/freetype/package.d',
  'dependencies/bindbc-glfw/source/bindbc/glfw/binddynamic.d',
  'dependencies/bindbc-glfw/source/bindbc/glfw/bindstatic.d',
  'dependencies/bindbc-glfw/source/bindbc/glfw/package.d',
  'dependencies/bindbc-glfw/source/bindbc/glfw/types.d',
  'dependencies/bindbc-loader/source/bindbc/loader/package.d',
  'dependencies/bindbc-loader/source/bindbc/loader/sharedlib.d',
  'dependencies/bindbc-loader/source/bindbc/loader/system.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/arb_01.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_30.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_31.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_32.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_33.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_40.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_41.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_42.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_43.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_44.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_45.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/core_46.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/arb/package.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/dep/dep11.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/dep/dep12.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/dep/dep13.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/dep/dep14.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/dep/dep20.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/dep/dep21.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/dep/dep30.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl11.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl12.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl13.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl14.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl15.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl20.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl21.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl30.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl31.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl32.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl33.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl40.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl41.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl42.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl43.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl44.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl45.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/gl46.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/package.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/bind/types.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/config.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/context.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/gl.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/package.d',
  'dependencies/bindbc-opengl/source/bindbc/opengl/util.d',
  'source/main.d',
    'dependencies/arsd/simpledisplay.d'
]

inc_dirs = [
    'dependencies/',
    'dependencies/bindbc-glfw/source/',
    'dependencies/bindbc-opengl/source/',
    'dependencies/bindbc-loader/source/',
    'dependencies/bindbc-freetype/source/',
    'source/'
]

d_versions = [
    'BindGLFW_Static',
    'GL_45',
    'GL_ARB',
    'BindFT_Static',
    'FT_29',
    'bindbc',
   # 'GL_AllowDeprecated',
    'useKHRDebug',
    'X11'
]

glfw_dep = dependency('glfw3', version : '>=3.0.0')
freetype_dep = dependency('freetype2', version : '>=2.7')
gl_dep = dependency('gl')
fontconfig_dep = dependency('fontconfig')
x11_dep = dependency('x11')
xext_dep = dependency('xext')

executable('dtower',
    dtower_sources,
    include_directories : inc_dirs,
    d_module_versions : d_versions,
    dependencies : [glfw_dep, freetype_dep, gl_dep, fontconfig_dep, x11_dep, xext_dep])
