inc = include_directories('../..')

cgfm_math_sources = [
    'package.d',
    'box.d',
    'funcs.d',
    'matrix.d',
    'quaternion.d',
    'shapes.d',
    'simplerng.d',
    'vector.d']

cgfm_math = library('cgfm_math',
                    cgfm_math_sources,
                    include_directories: inc)

