inc = include_directories('../..')

derelict_opencl_sources = [
    'cl.d',
    'cl_d3d10.d',
    'cl_d3d11.d',
    'cl_dx9_media_sharing.d',
    'cl_egl.d',
    'cl_ext.d',
    'cl_gl.d',
    'cl_gl_ext.d',
    'constants.d',
    'functions.d',
    'loader.d',
    'types.d']

derelict_opencl = library('derelict_opencl',
                          derelict_opencl_sources,
                          include_directories : inc)
