dcompute_driver_cuda_sources = [
    'buffer.d',
    'context.d',
    'device.d',
    'event.d',
    'kernel.d',
    'memory.d',
    'package.d',
    'platform.d',
    'program.d',
    'queue.d']

dcompute_driver_cuda = library('dcompute_driver_cuda',
                               dcompute_driver_cuda_sources);
