inc = include_directories('../../../..')

dcompute_driver_ocl_raw_sources = [
    'enums.d',
    'functions.d',
    'package.d']

dcompute_driver_ocl_raw = library('dcompute_driver_ocl_raw',
                                  dcompute_driver_ocl_raw_sources,
                                  include_directories: inc)
